Reorganized the files structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,22 +160,22 @@ include_directories(
 # add_executable(${PROJECT_NAME}_node src/adaptive_grasping_node.cpp)
 
 set(ADAPTIVE_SOURCE_FILES
-   src/parsing_utilities.cpp
-	src/contactState.cpp
-	src/matricesCreator.cpp
-	src/contactPreserver.cpp
-	src/robotCommander.cpp
-        src/basicTask.cpp
-        src/reversePriorityManager.cpp
+		src/utils/parsing_utilities.cpp
+		src/contactState.cpp
+		src/matricesCreator.cpp
+		src/contactPreserver.cpp
+		src/robotCommander.cpp
+		src/task_utils/basicTask.cpp
+		src/task_utils/reversePriorityManager.cpp
 )
 
-add_executable(${PROJECT_NAME}_tf_listener src/tf_listener.cpp)
-add_executable(${PROJECT_NAME}_collision_detection_twist_node src/collision_detection_twist_node.cpp)
 add_executable(${PROJECT_NAME}_fg_node src/full_grasper_node.cpp src/fullGrasper.cpp ${ADAPTIVE_SOURCE_FILES})
 add_executable(${PROJECT_NAME}_ag_node src/adaptive_grasper_node.cpp src/adaptiveGrasper.cpp ${ADAPTIVE_SOURCE_FILES})
 add_executable(${PROJECT_NAME}_robotCommander src/robot_commander_node.cpp ${ADAPTIVE_SOURCE_FILES})
 
 #TESTS
+add_executable(${PROJECT_NAME}_tf_listener test/tf_listener.cpp)
+add_executable(${PROJECT_NAME}_collision_detection_twist_node test/collision_detection_twist_node.cpp)
 add_executable(${PROJECT_NAME}_homing_node test/homing.cpp ${ADAPTIVE_SOURCE_FILES})
 add_executable(${PROJECT_NAME}_test_contactState test/test_contact_state.cpp ${ADAPTIVE_SOURCE_FILES})
 add_executable(${PROJECT_NAME}_test_matricesCreator test/test_matrices_creator.cpp ${ADAPTIVE_SOURCE_FILES})
@@ -207,12 +207,6 @@ add_dependencies(${PROJECT_NAME}_test_reversePriority ${${PROJECT_NAME}_EXPORTED
 #   ${catkin_LIBRARIES}
 # )
 
-target_link_libraries(${PROJECT_NAME}_tf_listener
-   ${catkin_LIBRARIES}
-)
-target_link_libraries(${PROJECT_NAME}_collision_detection_twist_node
-   ${catkin_LIBRARIES}
-)
 target_link_libraries(${PROJECT_NAME}_fg_node
    ${catkin_LIBRARIES}
 )
@@ -224,6 +218,12 @@ target_link_libraries(${PROJECT_NAME}_robotCommander
 )
 
 #TESTS
+target_link_libraries(${PROJECT_NAME}_tf_listener
+		${catkin_LIBRARIES}
+		)
+target_link_libraries(${PROJECT_NAME}_collision_detection_twist_node
+		${catkin_LIBRARIES}
+		)
 target_link_libraries(${PROJECT_NAME}_homing_node
    ${catkin_LIBRARIES}
 )
