--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -7,16 +7,16 @@ adaptive_grasping:
   touch_topic_name: "/touching_finger_topic"
   # The following map contains the correspondence between ids and link names
   link_names_map:
-    "1" : "right_hand_thumb_distal_link"
-    "2" : "right_hand_index_distal_link"
-    "3" : "right_hand_middle_distal_link"
-    "4" : "right_hand_ring_distal_link"
-    "5" : "right_hand_little_distal_link"
+    "1" : "soft_hand_thumb_distal_link"
+    "2" : "soft_hand_index_distal_link"
+    "3" : "soft_hand_middle_distal_link"
+    "4" : "soft_hand_ring_distal_link"
+    "5" : "soft_hand_little_distal_link"
   # The following map contains other necessary params for adaptive_grasping
   params_map:
     world_name: "world"
-    palm_name: "right_hand_ee_link"
-    ee_name: "right_hand_ee_link"
+    palm_name: "soft_hand_palm_link"
+    ee_name: "soft_hand_palm_link"
   # The array containing the number of links of each finger
   joints_num: [5, 7, 7, 7, 7]
   # The following list of arrays is the contact selection matrix H (CHANGE ALSO p_vector ACCORDINGLY)
