--- a/config/rosconsole.conf
+++ b/config/rosconsole.conf
@@ -2,3 +2,4 @@
 # log4j.logger.ros.lwr_controllers = DEBUG
 # log4j.logger.ros.finger_fk = DEBUG
 # log4j.logger.ros.soft_hand_controllers = DEBUG
+# log4j.logger.ros.adaptive_grasping = DEBUG
