--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -66,7 +66,10 @@ adaptive_grasping:
   # The dimensions of the tasks for the RP Manger (Contact Preserver) (The last ones from the num_task_th element are the ones on touch)
   dim_tasks: [1, 3, 3, 3, 3]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH prio_tasks
   # The priority of the above defined tasks (The last ones from the num_task_th element are the ones on touch)
-  prio_tasks: [1, 4, 5, 2, 3]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
+  prio_tasks: [1, 4, 5, 2, 3] # first good order # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
+#  prio_tasks: [3, 4, 5, 1, 2] # second not bad order (but stucks at 2fingers) # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
+#  prio_tasks: [5, 3, 4, 1, 2]  # third order bad (stucks at one finger) PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
+#  prio_tasks: [2, 4, 5, 1, 3]  # variant of second order bad (no more closing at 2 fingers) PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
   # The lambda max for the pseudo inversion in RP Manager
   lambda_max: 0.001
   # The epsilon for the diagonal loading in singular value decomposition in RP Manager
