Separated pregrasp, adaptive and postgrasp in full grasper and now references are sent to adaptive grasper from full grasper

--- a/config/full_grasp_params.yaml
+++ b/config/full_grasp_params.yaml
@@ -39,3 +39,14 @@ full_grasper:
     "helmet" : [0.120, -0.039, 0.179, 3.007, 0.200, 0.247]
     "debug" : [0.013, 0.012, 0.338, -1.512, 0.021, -0.005]
     "sponge" : [0.089, 0.008, 0.087, 3.086, 0.030, 0.057]
+
+  # The references for different situations
+  approach_ref_map:
+    "x_d" : [0.0, 0.0, 0.0, -0.01, 0.0, 0.0, 0.0]
+    "f_d_d" : [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+  adaptive_ref_map:
+    "x_d": [0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+    "f_d_d": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+  lift_ref_map:
+    "x_d": [0.0, 0.0, 0.0, 0.01, 0.0, 0.0, 0.0]
+    "f_d_d": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
