--- a/config/full_grasp_params.yaml
+++ b/config/full_grasp_params.yaml
@@ -42,11 +42,12 @@ full_grasper:
 
   # The references for different situations
   approach_ref_map:
-    "x_d" : [0.0, 0.0, 0.0, -0.01, 0.0, 0.0, 0.0]
+    "sigma_d" : [0.0]
+    "vel_p_d" : [0.03] # Speed for going down the local z axis
     "f_d_d" : [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
   adaptive_ref_map:
     "x_d": [0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     "f_d_d": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
   lift_ref_map:
-    "x_d": [0.0, 0.0, 0.0, 0.01, 0.0, 0.0, 0.0]
+    "x_d": [0.0, 0.0, 0.0, 0.03, 0.0, 0.0, 0.0]
     "f_d_d": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
