--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -64,9 +64,9 @@ adaptive_grasping:
   # The number of tasks for the RP Manger (Excluding contact tasks) (Contact Preserver) if num_tasks == 2 -> basic two tasks relaxation RP
   num_tasks: 3
   # The dimensions of the tasks for the RP Manger (Contact Preserver) (The last ones from the num_task_th element are the ones on touch)
-  dim_tasks: [1, 3, 3, 3, 3]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH prio_tasks
+  dim_tasks: [1, 3, 3, 6]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH prio_tasks
   # The priority of the above defined tasks (The last ones from the num_task_th element are the ones on touch)
-  prio_tasks: [3, 4, 5, 1, 2]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
+  prio_tasks: [2, 3, 4, 1]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
   # The lambda max for the pseudo inversion in RP Manager
   lambda_max: 0.001
   # The epsilon for the diagonal loading in singular value decomposition in RP Manager
