--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -24,23 +24,29 @@ adaptive_grasping:
     - [1, 0, 0, 0, 0, 0]
     - [0, 1, 0, 0, 0, 0]
     - [0, 0, 1, 0, 0, 0]
-    - [0, 0, 0, 1, 0, 0]
-    - [0, 0, 0, 0, 1, 0]
-    - [0, 0, 0, 0, 0, 1]
+    # - [0, 0, 0, 1, 0, 0]
+    # - [0, 0, 0, 0, 1, 0]
+    # - [0, 0, 0, 0, 0, 1]
   # The stiffness matrix for the contact forces
-  k_matrix:     # fully constrained
-    - [0.1, 0, 0, 0, 0, 0]
-    - [0, 0.1, 0, 0, 0, 0]
-    - [0, 0, 0.1, 0, 0, 0]
-    - [0, 0, 0, 0.1, 0, 0]
-    - [0, 0, 0, 0, 0.1, 0]
-    - [0, 0, 0, 0, 0, 0.1]
+  k_matrix:     
+    # fully constrained
+    # - [0.1, 0, 0, 0, 0, 0]
+    # - [0, 0.1, 0, 0, 0, 0]
+    # - [0, 0, 0.1, 0, 0, 0]
+    # - [0, 0, 0, 0.1, 0, 0]
+    # - [0, 0, 0, 0, 0.1, 0]
+    # - [0, 0, 0, 0, 0, 0.1]
+    # position constrained
+    - [0.1, 0, 0]
+    - [0, 0.1, 0]
+    - [0, 0, 0.1]
+
   # The following array is the desired x motion
   x_d:
     - [0, 0, 0, 0, 0, 0, 0]                   # for simple grasp?
   # The following array is the desired contact force derivative
   f_d_d:
-    - [0, 0, 0, 0, 0, 0]
+    - [0, 0, 0, 0, 0, 0] # (same for fully and only position constrained -> filtered by H)
   # The rate of the adaptive loop
   spin_rate: 1000.0
   # The topic where the object pose is published
@@ -51,10 +57,12 @@ adaptive_grasping:
   scaling: 1.0
   # The permutation vector for relaxed minimization (the elements of the vector stand for the reordering of the rows of Q) (CHANGE ALSO h_matrix ACCORDINGLY)
   p_vector:
-      - [2, 3, 4, 5, 6, 7, 13, 11, 12, 10, 8, 9, 1]              # For RP
+      # - [2, 3, 4, 5, 6, 7, 13, 11, 12, 10, 8, 9, 1]              # For RP (fully constrained)
+      - [2, 3, 4, 5, 6, 7, 10, 8, 9, 1]              # For RP (position constrained)
   # The vector containing the indexes of the touch constraints
   touch_indexes:
-    - [8, 9, 10, 11, 12, 13]
+    # - [8, 9, 10, 11, 12, 13] #  (fully constrained)
+    - [8, 9, 10] #  (position constrained)
   # The threshold on the synergy joint value for stopping the grasping motion
   syn_thresh: 0.75
   # The bool to decide if null twist should be sent when relaxation occurs
@@ -64,9 +72,9 @@ adaptive_grasping:
   # The number of tasks for the RP Manger (Excluding contact tasks) (Contact Preserver) if num_tasks == 2 -> basic two tasks relaxation RP
   num_tasks: 3
   # The dimensions of the tasks for the RP Manger (Contact Preserver) (The last ones from the num_task_th element are the ones on touch)
-  dim_tasks: [1, 3, 3, 6]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH prio_tasks
+  dim_tasks: [1, 3, 3, 3]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH prio_tasks
   # The priority of the above defined tasks (The last ones from the num_task_th element are the ones on touch)
-  prio_tasks: [2, 3, 4, 1]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
+  prio_tasks: [1, 3, 4, 2]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
   # The lambda max for the pseudo inversion in RP Manager
   lambda_max: 0.001
   # The epsilon for the diagonal loading in singular value decomposition in RP Manager
