--- a/config/full_grasp_params.yaml
+++ b/config/full_grasp_params.yaml
@@ -44,13 +44,13 @@ full_grasper:
   approach_ref_map:
     "sigma_d" : [0.0]
     "vel_p_d" : [0.03] # Speed for going down the local z axis
-    "f_d_d" : [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]    # Forces for both approaching and pivoting
+    "f_d_d" : [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]    # Forces for both approaching and pivoting (same for fully and only position constrained -> filtered by H)
   adaptive_ref_map:
     "x_d": [0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
-    "f_d_d": [0.0, 0.0, 0.001, 0.0, 0.0, 0.0]     # Forces for restraining
+    "f_d_d": [0.0, 0.0, 0.001, 0.0, 0.0, 0.0]     # Forces for restraining (same for fully and only position constrained -> filtered by H)
   lift_ref_map:
     "x_d": [0.0, 0.0, 0.0, 0.03, 0.0, 0.0, 0.0]
-    "f_d_d": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]     # Forces when lifting (not used)
+    "f_d_d": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]     # Forces when lifting (NOT USED!!!!!)
 
 
 # ATTENTION!!! Check if f_d_d complies with the h_matrix in adaptive_params.yaml
